--- a/GeraAlerta/geraAlerta/relatorio.rmd
+++ b/GeraAlerta/geraAlerta/relatorio.rmd
@@ -151,7 +151,7 @@ plot.alerta2<-function(ap){
       les = dim(d2v)[1]
       d2v <- d2v[c(52:les),]
       les <- dim(d2v)[1]
-      plot(1:les,d2v$casos,type="l",axes=FALSE,ylab="",xlab="")
+      plot(1:les,d2v$casosm,type="l",axes=FALSE,ylab="",xlab="")
       abline(v=which(d2v$cor==1),col=cores[1],lwd=2)
       abline(v=which(d2v$cor==2),col=cores[2],lwd=2)
       abline(v=which(d2v$cor==3),col=cores[3],lwd=2)
