--- a/GeraAlerta/geraAlerta/relatorio.rmd
+++ b/GeraAlerta/geraAlerta/relatorio.rmd
@@ -1,7 +1,9 @@
 ---
 title: "Info Dengue Rio"
-author: "Relatório de situação"
+author: "Relatório de situação da dengue na cidade do Rio de Janeiro"
 output: pdf_document
+geometry: margin=0.5in
+fontsize: 12pt
 ---
 
 ```{r echo=FALSE}
@@ -12,25 +14,44 @@ output: pdf_document
 ```{r echo=FALSE}
 hoje <- Sys.Date()
 SEhoje <- data2SE(hoje,file="../tabelas/SE.csv",format="%Y-%m-%d")
+#SEhoje <-"201515"   # Oswaldo, deixei fixo aqui para facilitar
 ```
 
 **Rio de Janeiro, `r as.character(hoje)`  (SE `r as.character(SEhoje)`)**
 
+<br> </br>
+------------
+<br> </br>
+
+Confira a situação da dengue na cidade do Rio de Janeiro. Mais detalhes, ver: [www.dengue.mat.br](www.dengue.mat.br) 
+
+## Índice {#top}
+* [Na cidade](#tab1)
+* [APS 1](#ap1)
+* [APS 2.1](#ap21)
+* [APS 2.2](#ap22)
+* [APS 3.1](#ap31)
+* [APS 3.2](#ap32)
+* [APS 3.3](#ap33)
+* [APS 4](#ap4)
+* [APS 5.1](#ap51)
+* [APS 5.2](#ap52)
+* [APS 5.3](#ap53)
+
+* [Mapa](#mapa)
+* [Notas](#notas)
+
+\newpage
 ```{r echo=FALSE}
-# Abre os dados mais recentes (se chamado por geraAlerta, nao precisa)
 bdalerta <- paste("../",nalerta,sep="")
+#bdalerta = "alertaAPS_201514.csv"
 d2 <- read.csv(file=bdalerta)
 ```
 
 
-* [Na cidade](#tab1)
-
-* [Por APS](#tab2)
-
-
 <br> </br>
 
-### <a name="tab1"></a> Situação na cidade do Rio de Janeiro
+### <a name="tab1"></a> Situação da dengue na cidade do Rio de Janeiro
 
 ```{r echo=FALSE}
 # serie temporal de casos agregados na cidade
@@ -67,21 +88,23 @@ axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
 
 ```
 
-\pagebreak
+
+\newpage
 
 Últimas 6 semanas:
 
 ```{r echo=FALSE}
 library(pander)
 panderOptions('table.split.table', Inf)
-pander(tail(cidade,n=6),compact=TRUE,)
-
+tab <- tail(cidade,n=6)
+rownames(tab) <- NULL
+pander(tab,compact=TRUE,)
 ```
 
 Legenda:
 
 - SE: semana epidemiológica
-- casos: nímero de casos de dengue no SINAN
+- casos: número de casos de dengue no SINAN
 - casos_corrigidos: estimativa do número de casos notificados (ver [Notas](#notas))
 - tweets: número de tweets relatando sintomas de dengue (ver [Notas](#notas))
 - tmin: média das temperaturas mínimas da semana
@@ -101,9 +124,8 @@ Legenda:
 ```
 
 
-**Alerta por APS**
+**Código de Cores do Alerta por APS**
 
-Código:
 
 *Verde (atividade baixa)*
    temperatura < 22 graus por 3 semanas 
@@ -120,23 +142,13 @@ Código:
 *Vermelho (atividade alta)*
  incidência > 100:100.000
 
-```{r echo=FALSE}
-
-#* [APS 1](#ap1)
-#* [APS 2.1](#ap21)
-#* [APS 2.2](#ap22)
-#* [APS 3.1](#ap31)
-#* [APS 3.2](#ap32)
-#* [APS 3.3](#ap33)
-#* [APS 4](#ap4)
-#* [APS 5.1](#ap51)
-#* [APS 5.2](#ap52)
-#* [APS 5.3](#ap53)
-
-```
 
 
-### <a name="ap1"></a> Alerta APS 1
+
+\newpage
+
+### Alerta APS 1 {#ap1}
+
 
 ```{r echo=FALSE}
 cores <- c("green","yellow","orange","red")
@@ -145,33 +157,34 @@ cores <- c("#0D6B0D","yellow3","orange","orangered")
 cores <- c("#0D6B0D","#C8D20F","orange","red")
 
 
-plot.alerta2<-function(ap){
-      par(mai=c(0,0,0,0),mar=c(4,1,1,1))
-      d2v <- subset(d2,APS==ap)
-      les = dim(d2v)[1]
-      d2v <- d2v[c(52:les),]
-      les <- dim(d2v)[1]
-      plot(1:les,d2v$casos,type="l",axes=FALSE,ylab="",xlab="")
-      abline(v=which(d2v$cor==1),col=cores[1],lwd=2)
-      abline(v=which(d2v$cor==2),col=cores[2],lwd=2)
-      abline(v=which(d2v$cor==3),col=cores[3],lwd=2)
-      abline(v=which(d2v$cor==4),col=cores[4],lwd=2)
-      title(as.character(ap),cex=1.4)
-      axis(2)
-      axis(1,at=rev(seq(les,1,by=-16)),labels=d2v$SE[rev(seq(les,1,by=-16))],las=2,cex=0.3)
-      lines(1:les,d2v$casos,lwd=2)
-      lines(1:les,d2v$casosm,lwd=2,lty=2)
-      }
 
+plot.alerta2<-function(d2=d2,ap){
+  par(mai=c(0,0,0,0),mar=c(4,1,1,1))
+  d2v <- subset(d2,APS==ap)
+  
+  cores <- c("#0D6B0D","#C8D20F","orange","red")
+  dv2.ts <- ts(d2v$casosm,start=c(2010,1),freq=52)
+  tempo <- time(dv2.ts)
+  plot(dv2.ts,ylab="Casos",xlab="Ano")
+  for (i in 1:4) {
+    onde <- which(d2v$cor==i) 
+     if (length(onde))
+          segments(tempo[onde],0,tempo[onde],(d2v[onde,"casosm"]),col=cores[i],lwd=3)
+  }
+  title(as.character(ap),cex=1.4)
+  lines(dv2.ts,lwd=2)
+ 
+}
 ```
 
 ```{r echo=FALSE}
 panderOptions('table.split.table', Inf)
 
 par(mfrow=c(1,1))
-plot.alerta2("AP1")
-tab<-tail(d2[d2$APS=="AP1",c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,"AP1")
+tab<-tail(d2[d2$APS=="AP1",c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -180,18 +193,19 @@ Histórico da APS 1
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
 
-### <a name="ap21"></a> Alerta APS 2.1
+\newpage
+
+### Alerta APS 2.1 {#ap21}
 
 ```{r echo=FALSE}
 ap = "AP2.1"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -200,18 +214,18 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
+\newpage
 
-### <a name="ap22"></a> Alerta APS 2.2
+### Alerta APS 2.1 {#ap22}
 
 ```{r echo=FALSE}
 ap = "AP2.2"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -220,18 +234,19 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
 
-### <a name="ap31"></a> Alerta APS 3.1
+\newpage
+
+### Alerta APS 3.1 {#ap31}
 
 ```{r echo=FALSE}
 ap = "AP3.1"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -240,18 +255,17 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
 
-### <a name="ap32"></a> Alerta APS 3.2
+### Alerta APS 3.2 {#ap32}
 
 ```{r echo=FALSE}
 ap = "AP3.2"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -260,18 +274,17 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
 
-### <a name="ap33"></a> Alerta APS 3.3
+### Alerta APS 3.3 {#ap33}
 
 ```{r echo=FALSE}
 ap = "AP3.3"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -280,18 +293,16 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
-
-### <a name="ap4"></a> Alerta APS 4
+### Alerta APS 4  {#ap4}
 
 ```{r echo=FALSE}
 ap = "AP4"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -300,18 +311,17 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
 
-### <a name="ap51"></a> Alerta APS 5.1
+### Alerta APS 5.1 {#ap51}
 
 ```{r echo=FALSE}
 ap = "AP5.1"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -320,18 +330,17 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
 
-### <a name="ap52"></a> Alerta APS 5.2
+### Alerta APS 5.2 {#ap52}
 
 ```{r echo=FALSE}
 ap = "AP5.2"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -340,18 +349,16 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
-
-### <a name="ap53"></a> Alerta APS 5.3
+### Alerta APS 5.3 {#ap53}
 
 ```{r echo=FALSE}
 ap = "AP5.3"
-plot.alerta2(ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=6)
-names(tab)<-c("SE","temp","casos","inc","AClima","ATweet","ATransm","ACasos","nivel")
+plot.alerta2(d2,ap)
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
+names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+rownames(tab) <- NULL
 ```
 
 <br> </br>
@@ -360,14 +367,51 @@ Histórico da `r ap`
 ```{r echo=FALSE}
 pander(tab)
 ```
+[volta](#top)
 
-```{r echo=FALSE}
-#[volta](#volta)
+<br> </br>
+
+\newpage
+
+
+### Mapa APs {#mapa}
+
+```{r fig.align='center',  echo=FALSE, message=TRUE, warning=TRUE}
+
+#install.packages("rgeos")
+#precisa antes 
+#sudo apt-get install libgeos-dev
+
+require(maptools,quietly = TRUE,warn.conflicts = FALSE)
+#gpclibPermit()
+#mapa <- readShapeSpatial("CAPS_SMS.shp",ID="COD_AP_SMS")
+mapa <- readShapeSpatial("../tabelas/CAPS_SMS.shp",ID="COD_AP_SMS")
+ultima_se <- sort(d2$SE,decreasing =TRUE)[1]
+lastab <- d2[d2$SE== ultima_se,c("APS","cor")]
+lastab$APS <-  sprintf("%02.1f",as.numeric(gsub("AP","",lastab$APS)))
+mapa@data <- merge(mapa@data,lastab,by.x="COD_AP_SMS",by.y="APS")
+par(mai=c(0,0,0,0),mar=c(4,1,1,1))
+
+plot(mapa,col=cores[mapa@data$cor])
+coords <- coordinates(mapa)
+coords[1,1] <- -43.19
+coords[2,2] <- -22.945
+text(coords,label=mapa@data$COD_AP_SMS,cex=0.6)
+legend("bottomright",fill=cores,c("atividade baixa","Alerta","Transmissão sustentada","atividade alta"),bty="n",cex=0.6)
+par(cex.main=0.7)
+title(paste0( "Mapa MRJ por APs \n"," Semana ",substr(ultima_se,5,6)," de ",substr(ultima_se,1,4)))
 ```
 
+<br> </br>
 
+veja o mapa interativo em [Alerta Dengue](http://alerta.dengue.mat.br)
+<br> </br>
+<p> </p>
+[volta](#top)
 
-### <a name="notas"></a> Notas
+\newpage
+
+### Notas {#notas}
 
 
 - Os dados do sinan mais recentes ainda não foram totalmente digitados. Estimamos o número esperado de casos
@@ -379,8 +423,13 @@ Créditos
 ------
 Esse e um projeto desenvolvido em parceria pela Fiocruz, FGV e Prefeitura do Rio de Janeiro, com apoio da SVS/MS
 
-Mais detalhes, ver: www.dengue.mat.br
+Mais detalhes do projeto , ver: [www.dengue.mat.br](www.dengue.mat.br) 
 
-```{r echo=FALSE}
-#[volta](#volta)
-```
+<br> </br>
+------------
+<br> </br>
+
+
+![logo](logo.png)
+
+[volta](#top)
