--- a/GeraAlerta/geraAlerta/relatorio.rmd
+++ b/GeraAlerta/geraAlerta/relatorio.rmd
@@ -19,11 +19,8 @@ SEhoje <- data2SE(hoje,file="../tabelas/SE.csv",format="%Y-%m-%d")
 
 **Rio de Janeiro, `r as.character(hoje)`  (SE `r as.character(SEhoje)`)**
 
-<br> </br>
-------------
-<br> </br>
 
-Confira a situação da dengue na cidade do Rio de Janeiro. Mais detalhes, ver: [www.dengue.mat.br](www.dengue.mat.br) 
+Confira a situação da dengue na cidade do Rio de Janeiro. Mais detalhes, ver: [info.dengue.mat.br](info.dengue.mat.br) 
 
 ## Índice {#top}
 * [Na cidade](#tab1)
@@ -42,6 +39,7 @@ Confira a situação da dengue na cidade do Rio de Janeiro. Mais detalhes, ver: 
 * [Notas](#notas)
 
 \newpage
+
 ```{r echo=FALSE}
 bdalerta <- paste("../",nalerta,sep="")
 #bdalerta = "alertaAPS_201514.csv"
@@ -93,6 +91,12 @@ axis(1,at=rev(seq(le,1,by=-12)),labels=cidade$SE[rev(seq(le,1,by=-12))],las=2)
 
 Últimas 6 semanas:
 
+- SE: semana epidemiológica
+- casos: número de casos de dengue no SINAN
+- casos_corrigidos: estimativa do número de casos notificados (ver [Notas](#notas))
+- tweets: número de tweets relatando sintomas de dengue (ver [Notas](#notas))
+- tmin: média das temperaturas mínimas da semana
+
 ```{r echo=FALSE}
 library(pander)
 panderOptions('table.split.table', Inf)
@@ -101,13 +105,53 @@ rownames(tab) <- NULL
 pander(tab,compact=TRUE,)
 ```
 
-Legenda:
+\newpage
 
-- SE: semana epidemiológica
-- casos: número de casos de dengue no SINAN
-- casos_corrigidos: estimativa do número de casos notificados (ver [Notas](#notas))
-- tweets: número de tweets relatando sintomas de dengue (ver [Notas](#notas))
-- tmin: média das temperaturas mínimas da semana
+
+```{r echo=FALSE,warning=FALSE, error=FALSE }
+## Ovitraps Rio de Janeiro
+ovi$Date <- as.Date(ovi$Date, "%d.%m.%y")
+ultovi = max(ovi$Date) 
+```
+
+
+**Ovitrampas (última observação em `r as.character(ultovi)`)**
+
+```{r echo=FALSE,warning=FALSE, error=FALSE }
+# there are several months with value IPO=0, but I guess that they are in fact NAs
+ovi$IPO <- ovi$IPO
+ovi$IPO[ovi$IPO==0] <- NA
+
+# aggregating the data
+ovicity <- aggregate(cbind(IPO)~Date, data=ovi, FUN=mean, na.action=na.pass)
+le = dim(ovicity)[1]
+
+#bar
+#gRJ<-ggplot(ovicity[(le-12):le,], aes(x=Date, y=IPO))
+#gRJ + geom_bar(stat="identity") + 
+#    theme_bw(base_size=11, base_family="Arial") +
+#    labs(y = "IPO", x="") +
+#    ggtitle("Índice de positividade de ovitrampas - Rio de Janeiro")
+
+###########
+# Plot for each AP
+#bar
+datas=unique(ovi$Date)
+corte = datas[length(datas)-12]
+oviap<-subset(ovi,Date>=corte)
+g<-ggplot(oviap, aes(x=Date, y=IPO))
+g + geom_bar(stat="identity") + 
+    facet_wrap(~AP, ncol=2) + 
+    theme_bw(base_size=11, base_family="Arial") +
+    labs(y = "IPO", x="") +
+    ggtitle("Índice de positividade de ovitrampas nos últimos 12 meses")
+
+
+```
+
+\newpage
+
+
 
 ```{r echo=FALSE}
 #[volta para o início](#voltaini)
@@ -126,7 +170,6 @@ Legenda:
 
 **Código de Cores do Alerta por APS**
 
-
 *Verde (atividade baixa)*
    temperatura < 22 graus por 3 semanas 
    atividade de tweet normal (não aumentada)
@@ -142,8 +185,44 @@ Legenda:
 *Vermelho (atividade alta)*
  incidência > 100:100.000
 
+### Mapa APs {#mapa}
 
+```{r fig.align='center',  echo=FALSE, message=TRUE, warning=TRUE}
+cores <- c("green","yellow","orange","red")
+cores <- c("#0D6B0D","#BFEE63","#E2EE63","#EE9263")
+cores <- c("#0D6B0D","yellow3","orange","orangered")
+cores <- c("#0D6B0D","#C8D20F","orange","red")
 
+#install.packages("rgeos")
+#precisa antes 
+#sudo apt-get install libgeos-dev
+
+require(maptools,quietly = TRUE,warn.conflicts = FALSE)
+#gpclibPermit()
+#mapa <- readShapeSpatial("CAPS_SMS.shp",ID="COD_AP_SMS")
+mapa <- readShapeSpatial("../tabelas/CAPS_SMS.shp",ID="COD_AP_SMS")
+ultima_se <- sort(d2$SE,decreasing =TRUE)[1]
+lastab <- d2[d2$SE== ultima_se,c("APS","cor")]
+lastab$APS <-  sprintf("%02.1f",as.numeric(gsub("AP","",lastab$APS)))
+mapa@data <- merge(mapa@data,lastab,by.x="COD_AP_SMS",by.y="APS")
+par(mai=c(0,0,0,0),mar=c(4,1,1,1))
+
+plot(mapa,col=cores[mapa@data$cor])
+coords <- coordinates(mapa)
+coords[1,1] <- -43.19
+coords[2,2] <- -22.945
+text(coords,label=mapa@data$COD_AP_SMS,cex=0.6)
+legend("bottomright",fill=cores,c("atividade baixa","Alerta","Transmissão sustentada","atividade alta"),bty="n",cex=0.6)
+par(cex.main=0.7)
+title(paste0( "Mapa MRJ por APs \n"," Semana ",substr(ultima_se,5,6)," de ",substr(ultima_se,1,4)))
+```
+
+<br> </br>
+
+veja o mapa interativo em [Alerta Dengue](http://alerta.dengue.mat.br)
+<br> </br>
+<p> </p>
+[volta](#top)
 
 \newpage
 
@@ -151,13 +230,6 @@ Legenda:
 
 
 ```{r echo=FALSE}
-cores <- c("green","yellow","orange","red")
-cores <- c("#0D6B0D","#BFEE63","#E2EE63","#EE9263")
-cores <- c("#0D6B0D","yellow3","orange","orangered")
-cores <- c("#0D6B0D","#C8D20F","orange","red")
-
-
-
 plot.alerta2<-function(d2=d2,ap){
   par(mai=c(0,0,0,0),mar=c(4,4,1,1))
   d2v <- subset(d2,APS==ap)
@@ -371,43 +443,6 @@ pander(tab)
 
 <br> </br>
 
-\newpage
-
-
-### Mapa APs {#mapa}
-
-```{r fig.align='center',  echo=FALSE, message=TRUE, warning=TRUE}
-
-#install.packages("rgeos")
-#precisa antes 
-#sudo apt-get install libgeos-dev
-
-require(maptools,quietly = TRUE,warn.conflicts = FALSE)
-#gpclibPermit()
-#mapa <- readShapeSpatial("CAPS_SMS.shp",ID="COD_AP_SMS")
-mapa <- readShapeSpatial("../tabelas/CAPS_SMS.shp",ID="COD_AP_SMS")
-ultima_se <- sort(d2$SE,decreasing =TRUE)[1]
-lastab <- d2[d2$SE== ultima_se,c("APS","cor")]
-lastab$APS <-  sprintf("%02.1f",as.numeric(gsub("AP","",lastab$APS)))
-mapa@data <- merge(mapa@data,lastab,by.x="COD_AP_SMS",by.y="APS")
-par(mai=c(0,0,0,0),mar=c(4,1,1,1))
-
-plot(mapa,col=cores[mapa@data$cor])
-coords <- coordinates(mapa)
-coords[1,1] <- -43.19
-coords[2,2] <- -22.945
-text(coords,label=mapa@data$COD_AP_SMS,cex=0.6)
-legend("bottomright",fill=cores,c("atividade baixa","Alerta","Transmissão sustentada","atividade alta"),bty="n",cex=0.6)
-par(cex.main=0.7)
-title(paste0( "Mapa MRJ por APs \n"," Semana ",substr(ultima_se,5,6)," de ",substr(ultima_se,1,4)))
-```
-
-<br> </br>
-
-veja o mapa interativo em [Alerta Dengue](http://alerta.dengue.mat.br)
-<br> </br>
-<p> </p>
-[volta](#top)
 
 \newpage
 
