--- a/GeraAlerta/geraAlerta/relatorio.rmd
+++ b/GeraAlerta/geraAlerta/relatorio.rmd
@@ -54,8 +54,8 @@ d2 <- read.csv(file=bdalerta)
 ```{r echo=FALSE}
 # serie temporal de casos agregados na cidade
 casos <- aggregate(d2[,"casos"],by=list(SE=d2$SE),FUN=sum) # casos brutos
-casosm <- aggregate(d2[,"casosm"],by=list(SE=d2$SE),FUN=sum) # casos corrigidos
-cidade<- merge(casos,casosm,by="SE")
+casos_est <- aggregate(d2[,"casos_est"],by=list(SE=d2$SE),FUN=sum) # casos corrigidos
+cidade<- merge(casos,casos_est,by="SE")
 names(cidade)<-c("SE","casos","casos_corrigidos")
 dt<-subset(d2,APS=="AP1")[,c("SE","tweets")]  # tweets
 dc <- aggregate(d2[,"tmin"],by=list(SE=d2$SE),FUN=mean,na.rm=TRUE) #clima
@@ -235,13 +235,13 @@ plot.alerta2<-function(d2=d2,ap){
   d2v <- subset(d2,APS==ap)
   
   cores <- c("#0D6B0D","#C8D20F","orange","red")
-  dv2.ts <- ts(d2v$casosm,start=c(2010,1),freq=52)
+  dv2.ts <- ts(d2v$casos_est,start=c(2010,1),freq=52)
   tempo <- time(dv2.ts)
   plot(dv2.ts,ylab="Casos",xlab="Ano")
   for (i in 1:4) {
     onde <- which(d2v$cor==i) 
      if (length(onde))
-          segments(tempo[onde],0,tempo[onde],(d2v[onde,"casosm"]),col=cores[i],lwd=3)
+          segments(tempo[onde],0,tempo[onde],(d2v[onde,"casos_est"]),col=cores[i],lwd=3)
   }
   title(as.character(ap),cex=1.4)
   lines(dv2.ts,lwd=2)
@@ -254,8 +254,8 @@ panderOptions('table.split.table', Inf)
 
 par(mfrow=c(1,1))
 plot.alerta2(d2,"AP1")
-tab<-tail(d2[d2$APS=="AP1",c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS=="AP1",c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -275,8 +275,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP2.1"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -295,8 +295,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP2.2"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -316,8 +316,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP3.1"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -335,8 +335,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP3.2"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -354,8 +354,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP3.3"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -372,8 +372,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP4"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -391,8 +391,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP5.1"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -410,8 +410,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP5.2"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
@@ -428,8 +428,8 @@ pander(tab)
 ```{r echo=FALSE}
 ap = "AP5.3"
 plot.alerta2(d2,ap)
-tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos_est","inc","alertaClima","alertaTweet","alertaTransmissao","alertaCasos","nivel")],n=3)
-names(tab)<-c("SE","temp","casos","inc","Clima","Tweet","Transm","Casos","nivel")
+tab<-tail(d2[d2$APS==ap,c("SE","tmin","casos","casos_est","inc","nivel")],n=3)
+names(tab)<-c("SE","temp","casos not","casos est","inc","nivel")
 rownames(tab) <- NULL
 ```
 
